--- a/snapraid/config.h.in
+++ b/snapraid/config.h.in
@@ -33,6 +33,10 @@
 /* Define to 1 if you have the `clock_gettime' function. */
 #undef HAVE_CLOCK_GETTIME
 
+/* Define to 1 if you have the declaration of `statfs', and to 0 if you don't.
+   */
+#undef HAVE_DECL_STATFS
+
 /* Define to 1 if you have the <dirent.h> header file, and it defines `DIR'.
    */
 #undef HAVE_DIRENT_H
